--- a/references.bib
+++ b/references.bib
@@ -990,6 +990,18 @@
 	url = {}
 }
 
+@article{Regenwetter_et_al_2011,
+	author = {Regenwetter, M. and Dana, J. and Davis-Stober, C.},
+	journal = {Psychological Review},
+	title = {Transitivity of preferences},
+	volume = {118},
+	number = {1},
+	pages = {42--56},
+	year  = {2011},
+	doi = {10.1037/a0021150},
+	url = {}
+}
+
 @article{Boons_et_al_2012,
 	author = {Boons, T. and Brokx, J. and Dhooge, I. and Frijns, J. and Peeraer, L. and Vermeulen, A. and Wouters, J. and {van Wieringen}, A.},
 	journal = {Ear and Hearing},
