--- a/presentation.qmd
+++ b/presentation.qmd
@@ -1,6 +1,6 @@
 ---
 title: |
-  Finding CJ: modeling comparative judgment data with `R` (and `Stan`)
+  Finding Thurstone: modeling comparative judgment data with `R` (and `Stan`)
 author:
   - name: 
       given: Jose(ma)
@@ -48,9 +48,13 @@ author:
         group: Centre for computational linguistics, psycholinguistics, and sociolinguistics (CLiPS)
 date: last-modified
 bibliography: references.bib
-title-slide-attributes: 
-  data-notes: | 
-    (to do) 
+include-in-header:
+  - text: |
+      <style>
+      #title-slide .title {
+        font-size: 2em;
+      }
+      </style>
 ---
 
 # 1. Introduction {style="font-size:80%;"}
